--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -26,3 +26,24 @@
     <li>1 teaspoon dried basil</li>
     <li>1 teaspoon oregan</li>
 </ul>
+
+
+<h3>Instructions</h3>
+
+
+<ul>
+    <li><strong>First, cook your red lentils.</strong> Add 1 cup dried red lentils and 3 cups of water to a medium pot. Bring to a boil, and then simmer for about 20 minutes. Drain the lentils in a fine strainer, and then add to a large bowl. Add both jars of marinara to the bowl with the lentils and mix to combine. Set aside.</li>
+
+    <li>Preheat the oven to 350 degrees.</li>
+
+    <li><strong>Make the Cashew-Tofu Ricotta:</strong> Add the cashews to a food processor and process until fine and crumbly. Then add the tofu in chunks, nutritional yeast, lemon juice, salt, basil, oregano and garlic powder to the food processor. Pulse until well combined and pretty smooth.</li>
+    
+    <li><strong>Assembling the lasagna:</strong> Add about 1 cup of marinara sauce (with the cooked lentils) to the bottom of a large 9 x 13 inch casserole dish or lasagna pan. Spread it around evenly. Next add 4-5 lasagna noodles (uncooked). Spread half of the Cashew-Tofu Ricotta on top of the noodles. Top with half of the spinach. Add about 1 cup of the marinara sauce over the spinach, then place 4-5 lasagna noodles on top. Spread the rest of the Ricotta over the noodles, then the rest of the spinach. Place 4-5 more noodles on top of the spinach, and then pour the rest of the sauce over the top, evenly.</li> 
+
+
+    <li>Cover tightly with foil. Bake for 1 hour. Let cool at least 15 minutes before cutting and serving. (see below if using optional mozzarella topping)</li>
+
+    <li>While the lasagna is cooking, make your <a href="https://www.noracooks.com/easy-stretchy-vegan-mozzarella-cheese/">Vegan Mozzarella Cheese</a>, if using.</li>
+
+    <li>If using the mozzarella topping, simply remove the lasagna after 40 minutes of cooking in the oven. Spoon on the mozzarella, and pop it back in the oven for another 20 minutes. Remove, let cool for at least 15 minutes and serve.</li>
+</ul>
