Lade till Smoothie, uppdaterade förstasidan

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta> charset="UTF-8"
+        <meta charset="UTF-8"/>
         <title>Odin Recipes</title>
 
     </head>
@@ -9,7 +9,10 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="recipes/lasagna.html">Lasagne</a>
+        <ul>
+            <li><a href="recipes/smoothie.html">Smoothie</a></li>
+            <li><a href="recipes/lasagna.html">Lasagne</a></li>
+        </ul>
 
     </body>
 
