Uppdaterade för Heimir

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,49 +1,68 @@
-<h1>Lasagne Recipe</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Lasagne Recipe</title>
+        <link rel="stylesheet" href="../css/style.css">
 
-<img src="../img/IMG_8632.jpg" alt="Ready Lasagne">
+    </head>
+    <body>
+        <div id="main">
+        <div id="breadcrumbs">
+            <a class="breadcrumbs" href="../index.html">HOME</a> / <a class="breadcrumbs" href="../index.html">start</a>
+        </div>
+        <h1>Lasagne Recipe</h1>
+        <center>
+            <img src="../img/IMG_8632.jpg" alt="Ready Lasagne">
+        </center>
 
+        <h3 id="page_headline">Introduction</h3>
+        <p>Now, I adore a lasagna filled with zucchini, mushrooms, spinach and whatever other vegetables you’d like to put in it. However my children do not feel the same way! They just don’t want chunks of veggies in their lasagna. So I compromised.</p>
 
-<h3>Instructions</h3>
-<p>Now, I adore a lasagna filled with zucchini, mushrooms, spinach and whatever other vegetables you’d like to put in it. However my children do not feel the same way! They just don’t want chunks of veggies in their lasagna. So I compromised.</p>
+        <p>There are still plenty of healthy ingredients in this vegan lasagna, such as red lentils, tomato sauce, tofu, cashews, spinach and whole grain noodles. And I promise, it’s delicious!</p>
 
-<p>There are still plenty of healthy ingredients in this vegan lasagna, such as red lentils, tomato sauce, tofu, cashews, spinach and whole grain noodles. And I promise, it’s delicious!</p>
+        <h4>Let’s talk about red lentils for a minute.</h4>
+        <p>They are my favorite lentil, especially for kids and picky eaters! Talk about a protein powerhouse. At 18 grams of protein per cup cooked, these add a TON of nutrition to this dish. And the best thing about them is that unlike green or brown lentils, red lentils kinda mush and mix in with whatever you put them in.
 
-<h4>Let’s talk about red lentils for a minute.</h4>
-<p>They are my favorite lentil, especially for kids and picky eaters! Talk about a protein powerhouse. At 18 grams of protein per cup cooked, these add a TON of nutrition to this dish. And the best thing about them is that unlike green or brown lentils, red lentils kinda mush and mix in with whatever you put them in.
-
-</p>
-
-
-<h3>Ingredients</h3>
-<ul>
-    <li>180 g dried red lentils</li>
-    <li>(2) 25-ounce jars marinara sauce</li>
-    <li>129 g raw cashews</li>
-    <li>454 g firm tofu, patted dry with paper towels</li>
-    <li>22 g nutritional yeast</li>
-    <li>3 tablespoons fresh lemon juice, from about 2 lemons</li>
-    <li>1 teaspoon salt</li>
-    <li>1 teaspoon dried basil</li>
-    <li>1 teaspoon oregan</li>
-</ul>
-
-
-<h3>Instructions</h3>
+        </p>
 
 
-<ol>
-    <li><strong>First, cook your red lentils.</strong> Add 1 cup dried red lentils and 3 cups of water to a medium pot. Bring to a boil, and then simmer for about 20 minutes. Drain the lentils in a fine strainer, and then add to a large bowl. Add both jars of marinara to the bowl with the lentils and mix to combine. Set aside.</li>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>180 g dried red lentils</li>
+            <li>(2) 25-ounce jars marinara sauce</li>
+            <li>129 g raw cashews</li>
+            <li>454 g firm tofu, patted dry with paper towels</li>
+            <li>22 g nutritional yeast</li>
+            <li>3 tablespoons fresh lemon juice, from about 2 lemons</li>
+            <li>1 teaspoon salt</li>
+            <li>1 teaspoon dried basil</li>
+            <li>1 teaspoon oregan</li>
+        </ul>
 
-    <li>Preheat the oven to 350 degrees.</li>
 
-    <li><strong>Make the Cashew-Tofu Ricotta:</strong> Add the cashews to a food processor and process until fine and crumbly. Then add the tofu in chunks, nutritional yeast, lemon juice, salt, basil, oregano and garlic powder to the food processor. Pulse until well combined and pretty smooth.</li>
-    
-    <li><strong>Assembling the lasagna:</strong> Add about 1 cup of marinara sauce (with the cooked lentils) to the bottom of a large 9 x 13 inch casserole dish or lasagna pan. Spread it around evenly. Next add 4-5 lasagna noodles (uncooked). Spread half of the Cashew-Tofu Ricotta on top of the noodles. Top with half of the spinach. Add about 1 cup of the marinara sauce over the spinach, then place 4-5 lasagna noodles on top. Spread the rest of the Ricotta over the noodles, then the rest of the spinach. Place 4-5 more noodles on top of the spinach, and then pour the rest of the sauce over the top, evenly.</li> 
+        <h3>Instructions</h3>
 
 
-    <li>Cover tightly with foil. Bake for 1 hour. Let cool at least 15 minutes before cutting and serving. (see below if using optional mozzarella topping)</li>
+        <ol>
+            <li><strong>First, cook your red lentils.</strong> Add 1 cup dried red lentils and 3 cups of water to a medium pot. Bring to a boil, and then simmer for about 20 minutes. Drain the lentils in a fine strainer, and then add to a large bowl. Add both jars of marinara to the bowl with the lentils and mix to combine. Set aside.</li>
 
-    <li>While the lasagna is cooking, make your <a href="https://www.noracooks.com/easy-stretchy-vegan-mozzarella-cheese/">Vegan Mozzarella Cheese</a>, if using.</li>
+            <li>Preheat the oven to 350 degrees.</li>
 
-    <li>If using the mozzarella topping, simply remove the lasagna after 40 minutes of cooking in the oven. Spoon on the mozzarella, and pop it back in the oven for another 20 minutes. Remove, let cool for at least 15 minutes and serve.</li>
-</ol>
+            <li><strong>Make the Cashew-Tofu Ricotta:</strong> Add the cashews to a food processor and process until fine and crumbly. Then add the tofu in chunks, nutritional yeast, lemon juice, salt, basil, oregano and garlic powder to the food processor. Pulse until well combined and pretty smooth.</li>
+            
+            <li><strong>Assembling the lasagna:</strong> Add about 1 cup of marinara sauce (with the cooked lentils) to the bottom of a large 9 x 13 inch casserole dish or lasagna pan. Spread it around evenly. Next add 4-5 lasagna noodles (uncooked). Spread half of the Cashew-Tofu Ricotta on top of the noodles. Top with half of the spinach. Add about 1 cup of the marinara sauce over the spinach, then place 4-5 lasagna noodles on top. Spread the rest of the Ricotta over the noodles, then the rest of the spinach. Place 4-5 more noodles on top of the spinach, and then pour the rest of the sauce over the top, evenly.</li> 
+
+
+            <li>Cover tightly with foil. Bake for 1 hour. Let cool at least 15 minutes before cutting and serving. (see below if using optional mozzarella topping)</li>
+
+            <li>While the lasagna is cooking, make your <a href="https://www.noracooks.com/easy-stretchy-vegan-mozzarella-cheese/">Vegan Mozzarella Cheese</a>, if using.</li>
+
+            <li>If using the mozzarella topping, simply remove the lasagna after 40 minutes of cooking in the oven. Spoon on the mozzarella, and pop it back in the oven for another 20 minutes. Remove, let cool for at least 15 minutes and serve.</li>
+        </ol>
+    </div>
+
+    </body>
+</html>
