--- a/recipes/smoothie.html
+++ b/recipes/smoothie.html
@@ -1,8 +1,24 @@
-<h1>Morgon Smoothie med Spenat</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Smoothie Recipe</title>
+    <link rel="stylesheet" href="../css/style.css">
+
+</head>
+<body>
+
+<div id="main">
+
+<a class="breadcrumbs" href="../index.html">HOME</a> / <a class="breadcrumbs" href="../index.html">start</a>
+    
+<h1 id="page_headline">Morgon Smoothie med Spenat</h1>
 
 <img src="../img/green-smoothie.jpg" alt="Green Smoothie">
 
-<h3>Into</h3>
+<h3>Intro</h3>
 
 <p>Det här är en riktigt bra frukost!</p>
 
@@ -27,4 +43,6 @@
     <li>Mixxaa då</li>
 </ol>
 
-
+</div>
+ </body>
+</html>
